cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_10.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_cbc.c:40: error: DEAD_STORE
  The value written to &in (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_cbc.c:40:13: Write of unused value
38.           }
39.           if (l != -8) {
40.               n2ln(in, tin0, tin1, l + 8);
                  ^
41.               tin0 ^= tout0;
42.               tin1 ^= tout1;
